k8s/gitops/20-network/base/25-monitoring/252-alertmanager/ingress/allow-prometheus-to-alertmanager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-alertmanager
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: alertmanager

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
            - port: "8080"
              protocol: TCP
